refactor(RacingGame): 미사용 import 제거 및 리팩토링