@@ -1,25 +1,21 @@
 package racingcar;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Scanner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public class InputUI {
+    private static final Scanner sc = new Scanner(System.in);
 
-    private static final BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
-
-    public static List<String> inputCarNameList() throws IOException {
+    public static List<String> inputCarNameList() {
         System.out.println("경주할 자동차 이름을 입력하세요(이름은 쉼표(,)를 기준으로 구분).");
-        String input = br.readLine();
-        List<String> carNameList = Arrays.asList(input.split(","));
+        String input = sc.nextLine();
+        List<String> carNameList = List.of(input.split(","));
         while (!validation(carNameList)) {
             System.out.println("5글자 이하의 이름만 가능합니다.");
-            input = br.readLine();
-            carNameList = Arrays.asList(input.split(","));
+            input = sc.nextLine();
+            carNameList = List.of(input.split(","));
         }
 
         return carNameList;
@@ -34,13 +30,13 @@ public class InputUI {
         return isValid;
     }
 
-    public static int inputTurn() throws IOException {
+    public static int inputTurn() {
         System.out.println("시도할 회수는 몇회인가요?");
-        String input = br.readLine();
+        String input = sc.nextLine();
         Matcher matcher = Pattern.compile("(\\d+)").matcher(input);
-        while (!matcher.matches()){
+        while (!matcher.matches()) {
             System.out.println("숫자만 입력 가능합니다.");
-            input = br.readLine();
+            input = sc.nextLine();
             matcher = Pattern.compile("(\\d+)").matcher(input);
         }
 
